--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.9",
+    "swiper": "^9.3.2",
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@types/react-slick": "^0.23.10",
-    "@types/styled-components": "^5.1.26"
+    "@types/react-burger-menu": "^2.8.3",
+    "@types/styled-components": "^5.1.26",
+    "babel-plugin-styled-components": "^2.1.1"
   }
 }
